avoid recursion that can mess up DND setup (fdo#41996)

The way too smart ctor for the DND handler started drag immediately,
causing a race condition that could recurse to setting a handler
again before the first one was actually set, thus immediately again
causing the DND to be stopped, and then possibly later again started,
depending on how the race condition turned out. Use delayed initialization
to avoid this.

Change-Id: I528eddbdc7c52a19675997e4c866506c662cff19
Signed-off-by: Michael Meeks <michael.meeks@suse.com>